# akshare_mcp

./: README.md  pyproject.toml
akshare_mcp/: __main__.py  config.py  server.py
mcp_akshare/: __main__.py  config.py  server.py
