[project]
name = "akshare_mcp"
description = "AKShare MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.26",
    "fastmcp>=2.10.6",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "akshare_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["akshare_mcp"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["akshare_mcp*"]